Fixed overflow of code container

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ footer {
     border-radius: 0.5em;
     margin-top: 20px;
     max-width: 1140px;
-    overflow: scroll;
+    overflow-x: auto;
 }
 
 .code-file {width: 100%;}
